WIP on small bugs / features

--- a/client/src/components/redesign/ServiceConnectionRequests.scss
+++ b/client/src/components/redesign/ServiceConnectionRequests.scss
@@ -63,6 +63,7 @@ table.serviceConnectionRequests {
 
     h1 {
         font-size: 26px;
+        line-height: 30px;
     }
 
     div.service-connection-request-form {
