--- a/client/src/pages/UserInvitation.scss
+++ b/client/src/pages/UserInvitation.scss
@@ -16,6 +16,7 @@
 
         h1 {
             font-size: 32px;
+            line-height: 36px;
         }
 
         p.info {
@@ -76,6 +77,16 @@
             }
         }
 
+        div.disclaimer {
+            background-color: #fef595;
+            padding: 25px;
+            p {
+                margin-bottom: 6px;
+                font-size: 14px;
+                line-height: 18px;
+                color: $darker-grey;
+            }
+        }
 
     }
 }
